Corrected keyboard placement off-center alignment

--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@ body {
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .chord-box {
   width: 750px;
   height: 350px;
   background-color: #EEE;
-  border-radius: 16px;
+  border-radius: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
