--- a/tabs.css
+++ b/tabs.css
@@ -7,7 +7,7 @@
   background-color: #f1f1f1;
   display: flex;
   justify-content: center;
-  border-radius: 16px;
+  border-radius: 8px;
   font-family: Ubuntu;
 }
 
